# Asus-Fan-Control-in-Rust

./: Cargo.toml  INSTALL.sh  Makefile  README.md  fanctl.service  myfancontrol.service
src/: cli.rs  client.rs  controller.rs  daemon.rs  lib.rs  main.rs  utils.rs
