[package]
name = "fanctl"
version = "0.1.1"
authors = ["Cong Luan Tran"]
edition = "2021"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.1"
strum_macros = "0.27.1"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full", "net", "rt", "sync"] }
toml = "0.9.8"
walkdir = "2.5.0"
