[package]
name = "fanctl"
version = "0.1.1"
authors = ["Cong Luan Tran"]
edition = "2021"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27.2"
sysinfo = "0.38.1"
tokio = { version = "1.49.0", features = ["full", "net", "rt", "sync"] }
toml = "0.9.11"
walkdir = "2.5.0"
