[package]
name = "fanctl"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28", features = ["derive"] }
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["full", "net", "rt", "sync"] }
toml = "1.1.2"
walkdir = "2.5.0"
